modif singletonList -> List.of