@@ -6,6 +6,7 @@ package service.produit.impl;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.util.Collections;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -17,8 +18,6 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import org.springframework.test.context.web.WebAppConfiguration;
-import org.springframework.transaction.annotation.Propagation;
-import org.springframework.transaction.annotation.Transactional;
 
 import persistance.produit.dao.IProduitDao;
 import persistance.produit.entity.ProduitDo;
@@ -31,8 +30,6 @@ import persistance.produit.entity.ProduitDo;
 @WebAppConfiguration("WebContent")
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(locations = {"/META-INF/spring/applicationContext.xml", "/spring/hibernate-context-test.xml"})
-//Utilisation d'une transaction pour avoir des auto rollbacks à chaque fin de tests
-@Transactional(propagation = Propagation.REQUIRED)
 class ProduitServiceTest {
 
     @InjectMocks
@@ -50,9 +47,9 @@ class ProduitServiceTest {
      */
     @Test
     void testListerAllProduit() {
-        // SingletonList permet de retourner une liste avec 1 élement
         final var produitDo = new ProduitDo();
         produitDo.setPrixUnitaire(125d);
+        // List.of permet de retourner une liste
         Mockito.when(this.iProduitDaoMock.findAll()).thenReturn(Collections.singletonList(produitDo));
         assertEquals(1, this.produitServiceMock.listerAllProduit().size());
     }
@@ -62,10 +59,10 @@ class ProduitServiceTest {
      */
     @Test
     void testListerProduitsEnVente() {
-        // SingletonList permet de retourner une liste avec 1 élement
         final var produitDo = new ProduitDo();
         produitDo.setPrixUnitaire(125d);
-        Mockito.when(this.iProduitDaoMock.findAllProduitsEnVente()).thenReturn(Collections.singletonList(produitDo));
+        // List.of permet de retourner une liste
+        Mockito.when(this.iProduitDaoMock.findAllProduitsEnVente()).thenReturn(List.of(produitDo));
         assertEquals(1, this.produitServiceMock.listerProduitsEnVente().size());
     }
 }
